Finished html and css but css needs a few fixes

--- a/index.html
+++ b/index.html
@@ -2,10 +2,45 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <div class="myname">
+            <h1>Miguel Torres</h1>
+        </div>
+        <nav class="toptabs">
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+            <a href="projects.html">Projects</a>
+        </nav>
+    </header>
+    <section class="body">
+        <h2>Introducing My Portfolio</h2>
+        <div class="text">
+            <p>Welcome to my portfolio where i show the projects im working on or worked on. <br> Im a student at Bloomtech working to become a full stack web devloper. This is a early project that im working on and i hope to improve my skills from this experience</p>
+        </div>
+        <div class="topimg">
+            <img src="https://picsum.photos/900/400" alt="">
+        </div>
+        <div class="bottomimg">
+            <img src="https://picsum.photos/300" alt="">
+            <img src="https://picsum.photos/300" alt="">
+            <img src="https://picsum.photos/300" alt="">
+            <img src="https://picsum.photos/300" alt="">
+            <p>The images to the left are some projects that i worked on and im proud of them. <br> I've learned a lot from working on these projects. <br> I've learned diffrent kinds of languages for ex. Javascript, Html, Css and many more to come.</p>
+
+        </div>
+    </section>
+    <section>
+        <footer>
+            <nav>
+                <a href="https://www.linkedin.com/in/miguel-atorres/">Linkedin</a>
+            </nav>
+        </footer>
+    </section>
 </body>
 </html>
