--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <div class="text">
             <p>Welcome to my portfolio where i show the projects im working on or worked on. <br> Im a student at Bloomtech working to become a full stack web devloper. This is a early project that im working on and i hope to improve my skills from this experience</p>
         </div>
-        <div class="topimg">
-            <img src="https://picsum.photos/900/400" alt="">
-        </div>
-        <div class="bottomimg">
+        <section class="bg-img">
+
+        </section>
+        <div class="bottomrow">
             <img src="https://picsum.photos/300" alt="">
             <img src="https://picsum.photos/300" alt="">
             <img src="https://picsum.photos/300" alt="">
